Fixed alignment on content element

--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -67,7 +67,7 @@ body{
   background-color: #EEE;
   border-left: 2px solid #CCC;
   border-right: 2px solid #CCC;
-  padding: 0px 20px;
+  padding: 10px 20px;
 }
 
 a, a:visited {
